# cpp-library-management-system

./: .gitignore  Book.cpp  Book.h  BorrowRecord.cpp  BorrowRecord.h  CMakeLists.txt  Item.cpp  Item.h  Library.cpp  Library.h  Magazine.cpp  Magazine.h  PPT_new.pptx  README.md  Student.cpp  Student.h  Teacher.cpp  Teacher.h  User.cpp  User.h  build.bat  library_system.sln  library_system.vcxproj  main.cpp  图书借阅管理系统_讲解PPT.pptx  录制操作指南.md  视频脚本与PPT大纲.md  项目报告.md
